# HulkCompiler2026

./: Cargo.toml  Makefile  README.md  REPORT.md
crates/hulk-ast/: Cargo.toml
crates/hulk-ast/src/: lib.rs
crates/hulk-checker/: Cargo.toml
crates/hulk-checker/src/: lib.rs
crates/hulk-cli/: Cargo.toml
crates/hulk-cli/src/: main.rs
crates/hulk-lexer/: Cargo.toml
crates/hulk-lexer/src/: lib.rs
crates/hulk-parser/: Cargo.toml
crates/hulk-parser/src/: lib.rs
crates/hulk-vm/: Cargo.toml
crates/hulk-vm/src/: lib.rs
crates/hulk_ast/: Cargo.toml
crates/hulk_ast/src/: lib.rs
crates/hulk_interpreter/: Cargo.toml
crates/hulk_interpreter/src/: env.rs  error.rs  interpreter.rs  lib.rs  value.rs
crates/hulk_lexer/: Cargo.toml
crates/hulk_lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
crates/hulk_parser/: Cargo.toml
crates/hulk_parser/src/: error.rs  lib.rs  parser.rs
crates/hulk_semantic/: Cargo.toml
crates/hulk_semantic/src/: checker.rs  env.rs  error.rs  lib.rs  types.rs
examples/: error_example.hulk  fibonacci.hulk  shapes.hulk  sorting.hulk
hulkc/: Cargo.toml
hulkc/src/: main.rs
resources/: README.md
scripts/: import_resources.sh
